fix(server api): some api fixes
